// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions - component API should update open 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar__item ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button>
      Some button
    </button>
  </div>
  <div
    class="pf-v5-c-toolbar__item  ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <button
      aria-expanded="true"
      aria-label="kebab dropdown toggle"
      class="pf-v5-c-menu-toggle pf-m-expanded pf-m-plain"
      data-ouia-component-id="BulkActionsToggle"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="pf-v5-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 192 512"
        width="1em"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
    <div
      class="pf-v5-c-menu"
      data-ouia-component-id="BulkActionsList"
      data-ouia-component-type="PF5/Dropdown"
      data-ouia-safe="true"
      style="position: absolute; left: 0px; top: 0px; z-index: 9999; opacity: 0; transition: opacity 0ms cubic-bezier(.54, 1.5, .38, 1.11); min-width: 0px;"
    >
      <div
        class="pf-v5-c-menu__content"
      >
        <ul
          class="pf-v5-c-menu__list"
          role="menu"
        >
          <li
            class="pf-v5-c-menu__list-item ins-c-primary-toolbar__first-action"
            data-ouia-component-id="OUIA-Generated-DropdownItem-1"
            data-ouia-component-type="PF5/DropdownItem"
            data-ouia-safe="true"
            role="none"
          >
            <div
              class="pf-v5-c-menu__item ins-c-primary-toolbar__first-action"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="pf-v5-c-menu__item-main"
              >
                <span
                  class="pf-v5-c-menu__item-text"
                />
              </span>
            </div>
          </li>
          <li
            class="pf-v5-c-menu__list-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-2"
            data-ouia-component-type="PF5/DropdownItem"
            data-ouia-safe="true"
            role="none"
          >
            <button
              class="pf-v5-c-menu__item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span
                class="pf-v5-c-menu__item-main"
              >
                <span
                  class="pf-v5-c-menu__item-text"
                >
                  Some title
                </span>
              </span>
            </button>
          </li>
          <li
            class="pf-v5-c-menu__list-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-3"
            data-ouia-component-type="PF5/DropdownItem"
            data-ouia-safe="true"
            role="none"
          >
            <button
              class="pf-v5-c-menu__item"
              role="menuitem"
              tabindex="-1"
              type="button"
            >
              <span
                class="pf-v5-c-menu__item-main"
              >
                <span
                  class="pf-v5-c-menu__item-text"
                >
                  Custom props
                </span>
              </span>
            </button>
          </li>
          <li
            class="pf-v5-c-menu__list-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-4"
            data-ouia-component-type="PF5/DropdownItem"
            data-ouia-safe="true"
            role="none"
          >
            <button
              class="pf-v5-c-menu__item"
              role="menuitem"
              tabindex="-1"
              type="button"
            >
              <span
                class="pf-v5-c-menu__item-main"
              >
                <span
                  class="pf-v5-c-menu__item-text"
                >
                  plain string
                </span>
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Actions - component should render actionObject as first action 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar__item ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button
      aria-disabled="false"
      class="pf-v5-c-button pf-m-primary"
      data-ouia-component-id="Some title"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      type="button"
    >
      Some title
    </button>
  </div>
  <div
    class="pf-v5-c-toolbar__item ins-m-actions--empty ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <button
      aria-expanded="false"
      aria-label="kebab dropdown toggle"
      class="pf-v5-c-menu-toggle pf-m-plain"
      data-ouia-component-id="BulkActionsToggle"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="pf-v5-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 192 512"
        width="1em"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Actions - component should render actions and overflow 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar__item ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button>
      Some button
    </button>
  </div>
  <div
    class="pf-v5-c-toolbar__item  ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <button
      aria-expanded="false"
      aria-label="kebab dropdown toggle"
      class="pf-v5-c-menu-toggle pf-m-plain"
      data-ouia-component-id="BulkActionsToggle"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="pf-v5-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 192 512"
        width="1em"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Actions - component should render empty actions 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar__item ins-m-actions--empty ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <button
      aria-expanded="false"
      aria-label="kebab dropdown toggle"
      class="pf-v5-c-menu-toggle pf-m-plain"
      data-ouia-component-id="BulkActionsToggle"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="pf-v5-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 192 512"
        width="1em"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Actions - component should render just actions 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar__item ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button>
      Some button
    </button>
  </div>
  <div
    class="pf-v5-c-toolbar__item  ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <button
      aria-expanded="false"
      aria-label="kebab dropdown toggle"
      class="pf-v5-c-menu-toggle pf-m-plain"
      data-ouia-component-id="BulkActionsToggle"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="pf-v5-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 192 512"
        width="1em"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Actions - component should render no data 1`] = `<div />`;

exports[`Actions - component should render one action 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar__item ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button>
      Some button
    </button>
  </div>
  <div
    class="pf-v5-c-toolbar__item ins-m-actions--empty ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <button
      aria-expanded="false"
      aria-label="kebab dropdown toggle"
      class="pf-v5-c-menu-toggle pf-m-plain"
      data-ouia-component-id="BulkActionsToggle"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="pf-v5-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 192 512"
        width="1em"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Actions - component should render one action and multiple overflow 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar__item ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button>
      Some button
    </button>
  </div>
  <div
    class="pf-v5-c-toolbar__item ins-m-actions--empty ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <button
      aria-expanded="false"
      aria-label="kebab dropdown toggle"
      class="pf-v5-c-menu-toggle pf-m-plain"
      data-ouia-component-id="BulkActionsToggle"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="pf-v5-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 192 512"
        width="1em"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`overflowActionsMapper should render action object 1`] = `
<div>
  <div>
    <li
      class="pf-v5-c-menu__list-item ins-c-primary-toolbar__overflow-actions"
      data-ouia-component-id="OUIA-Generated-DropdownItem-14"
      data-ouia-component-type="PF5/DropdownItem"
      data-ouia-safe="true"
      role="none"
    >
      <button
        class="pf-v5-c-menu__item ins-c-primary-toolbar__overflow-actions"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          class="pf-v5-c-menu__item-main"
        >
          <span
            class="pf-v5-c-menu__item-text"
          >
            Some title
          </span>
        </span>
      </button>
    </li>
  </div>
</div>
`;

exports[`overflowActionsMapper should render component 1`] = `
<div>
  <div>
    <li
      class="pf-v5-c-menu__list-item ins-c-primary-toolbar__overflow-actions"
      data-ouia-component-id="OUIA-Generated-DropdownItem-13"
      data-ouia-component-type="PF5/DropdownItem"
      data-ouia-safe="true"
      role="none"
    >
      <div
        class="pf-v5-c-menu__item ins-c-primary-toolbar__overflow-actions"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="pf-v5-c-menu__item-main"
        >
          <span
            class="pf-v5-c-menu__item-text"
          >
            <button>
              Some button
            </button>
          </span>
        </span>
      </div>
    </li>
  </div>
</div>
`;

exports[`overflowActionsMapper should render plain string 1`] = `
<div>
  <div>
    <li
      class="pf-v5-c-menu__list-item ins-c-primary-toolbar__overflow-actions"
      data-ouia-component-id="OUIA-Generated-DropdownItem-15"
      data-ouia-component-type="PF5/DropdownItem"
      data-ouia-safe="true"
      role="none"
    >
      <button
        class="pf-v5-c-menu__item ins-c-primary-toolbar__overflow-actions"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          class="pf-v5-c-menu__item-main"
        >
          <span
            class="pf-v5-c-menu__item-text"
          >
            Custom props
          </span>
        </span>
      </button>
    </li>
  </div>
</div>
`;
